--- a/src/app/features/productManage/createProduct/createProduct.component.html
+++ b/src/app/features/productManage/createProduct/createProduct.component.html
@@ -3,7 +3,7 @@
   <div class="py-5 text-center">
     <h3 class="text-dark">Crear Producto</h3>
   </div>
-
+      
   <!-- Form -->
   <div class="row">
     <div class="col-12 order-md-1">
@@ -65,12 +65,17 @@
             Procesando...
           </span>
         </button>
-      </form>
+</form>
     </div>
   </div>
-
+      
   <!-- Footer -->
+   
   <footer class="my-5 pt-5 text-muted text-center text-small">
+    <button (click)="navigateToProduct()" class="btn btn-outline-secondary">
+        <i class="bi bi-arrow-left me-2"></i> Volver a productos
+      </button>
     <p class="mb-1">© Mi primera web :3</p>
   </footer>
+   
 </div>
