--- a/src/app/features/productManage/edit-product/editproduct.component.html
+++ b/src/app/features/productManage/edit-product/editproduct.component.html
@@ -80,6 +80,9 @@
 
   <!-- Footer -->
   <footer class="my-5 pt-5 text-muted text-center text-small">
+    <button (click)="navigateToProduct()" class="btn btn-outline-secondary">
+      <i class="bi bi-arrow-left me-2"></i> Volver a productos
+    </button>
     <p class="mb-1">© Mi primera web , trululu :3</p>
   </footer>
 </div>
